# narratrix

./: .cursorrules  .env  .gitignore  AGENTS.md  CLAUDE.md  LICENSE_2  README.md  biome.json  index.html  model-schema.json  narratrix_main.db  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: post-edit.mjs  settings.json
.cursor/rules/: main.mdc  theme.mdc
.github/: funding.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  config.yml
.github/workflows/: code-quality.yml  discord-release.yml  tauri-deploy.yml
.zed/: settings.json
json_schema/: character-schema.json  model-schema.json
src/: App.tsx  howler.d.ts  index.css  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  site.webmanifest
src-tauri/migrations/: 20230601000000_create_profiles.sql
src-tauri/resources/manifests/: anthropic.json  anthropic.jsonc  bedrock_anthropic.jsonc  openai.json  openai.jsonc  openai_compatible.json  openai_compatible.jsonc
src-tauri/resources/manifests/characters/: default.jsonc  dnd5e.jsonc
src-tauri/resources/manifests/embeddings/: aws_bedrock.jsonc  gemini.jsonc  ollama.jsonc  openai.jsonc  openai_compatible.jsonc
src-tauri/resources/manifests/models/: anthropic.jsonc  aws_bedrock.jsonc  bedrock_anthropic.jsonc  gemini.jsonc  ollama.jsonc  openai.jsonc  openai_compatible.jsonc  openrouter.jsonc
src-tauri/src/: main.rs
src-tauri/src/characters/: mod.rs
src-tauri/src/chats/: mod.rs
src-tauri/src/commands/: db_commands.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/migrations/: 01_create_profiles.sql  02_create_models.sql  02_create_templates.sql  03_create_models.sql  04_create_characters.sql  04_create_chats.sql  05_create_chats.sql  05_create_messages.sql  06_create_messages.sql  07_lorebooks.sql  07_message_new_column.sql  08_message_extra.sql  09_profile_quick_btn.sql  10_create_agents.sql  11_favorite_column.sql  12_create_chat_memories.sql  13_add_chat_settings.sql  14_lorebook_rag.sql
src-tauri/src/inference/: mod.rs
src-tauri/src/inference/llm/: aws_bedrock.rs  gemini.rs  gemini_types.rs  mod.rs  openai.rs
src-tauri/src/inference/tokenizer/: mod.rs
src-tauri/src/models/: manifest.rs  mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/utils/: README.md  env_vars.rs  mod.rs  timestamps.rs
src/commands/: inference.ts  security.ts
src/components/: SidebarPopover.tsx
src/contexts/: ProfileContext.tsx  ThemeContext.tsx
src/hooks/: ProfileContext.tsx  ProfileStore.tsx  ThemeContext.tsx  UIStore.ts  agentStore.ts  agentWorkflowStore.ts  characterStore.ts  chatStore.ts  chatTemplateStore.ts  consoleStore.ts  expressionStore.ts  inferenceStore.ts  lorebookStore.ts  manifestStore.ts  modelsStore.ts  profiles.ts  security.ts  templateStore.ts  useAgentTriggerManager.ts  useAgentWorkflow.ts  useChatInference.ts  useImageUrl.ts  useInference.ts  useLazyRender.ts  userChoiceStore.ts
src/lib/: rehype-highlight-quotes.ts  utils.ts
src/pages/: AGENTS.md
src/providers/: InferenceProvider.tsx  inferenceChatProvider.tsx
src/schema/: agent-schema.ts  character-manifest-schema.ts  characters-schema.ts  characters.ts  chat-chapter-schema.ts  chat-memory-schema.ts  chat-message-schema.ts  chat-schema.ts  chat-settings-schema.ts  chat-summary-schema.ts  chat.ts  default-settings.ts  grid.ts  inference-engine-schema.ts  inference-engine.ts  inference-template.ts  lorebook-schema.ts  manifest.ts  model-manifest-schema.ts  models-schema.ts  models.ts  profiles-schema.ts  profiles.ts  template-base-schema.ts  utils.ts  (+5 more)
(+394 files in other folders)
