[package]
name = "narratrix"
version = "0.12.3"
description = "Multi-Platform AI Client focused in Roleplay and Tabletop experience"
authors = ["vitorfdl"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "narratrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2"
# uuid = { version = "1.15.1", features = ["v4"] }
argon2 = { version = "0.5.3" }
tauri-plugin-single-instance = "2"
# time = { version = "0.3.38", features = ["serde"] }
rand = "0.8"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
base64 = "0.22.1"
aes-gcm = "0.10.3"
tokio = { version = "1.46.1", features = ["full"] }
aws-sdk-bedrockruntime = "1.97.0"
aws-config = "1.8.2"
anyhow = "1.0.98"
# async-openai = { path = "../../async-openai-narratrix/async-openai", features = ["byot"] }  # Local development
async-openai = { git = "https://github.com/vitorfdl/async-openai-narratrix", features = [
  "byot",
] } # Production build
futures = "0.3.31"
once_cell = "1.21.3"
dotenvy = "0.15.7"
aws-smithy-types = "1.3.0"
tiktoken-rs = "0.7.0"
tokenizers = { version = "0.21.1", features = ["http"] }
futures-core = "0.3.31"
tauri-plugin-clipboard-manager = "2"
# reqwest = "0.12.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.1"
